# calculator

./: .gitignore  CMakeLists.txt  README.md  aarch64-dictpen-linux-gnu-gcc-toolchain.cmake
.github/workflows/: build.yml
src/: main.cpp
